[project]
name = "health-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "apscheduler>=3.11.0",
    "loguru>=0.7.3",
    "neo4j>=5.28.2",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "supabase[async]>=2.18.1",
]
